actual result feedback

--- a/src/component/TestContainer.css
+++ b/src/component/TestContainer.css
@@ -5,3 +5,15 @@ td.exitTest {
 td.nextTest {
   display: inline-block;
 }
+
+span.actres-ok {
+  color: green;
+  font-variant: small-caps;
+  font-weight: bold;
+}
+
+span.actres-ok {
+  color: red;
+  font-variant: small-caps;
+  font-weight: bold;
+}
