another try to entice any sound out of Safari on iPhone...

--- a/src/component/TestContainer.css
+++ b/src/component/TestContainer.css
@@ -1,9 +1,11 @@
 td.exitTest {
   display: inline-block;
+  padding-right: 40px;
 }
 
 td.nextTest {
   display: inline-block;
+  padding-left: 40px;
 }
 
 span.actres-ok {
